--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,6 @@ ext.libraries = [
   intellijAnnotations: 'com.intellij:annotations:12.0',
 
   junit              : 'junit:junit:4.12',
-  assertJ            : 'org.assertj:assertj-core:1.7.1'
+  assertJ            : 'org.assertj:assertj-core:1.7.1',
+  jsonUnitFluent     : 'net.javacrumbs.json-unit:json-unit-fluent:1.6.0'
 ]
