--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ bin/
 gen/
 out/
 target/
+auto-jackson-example/src/main/generated/
 
 # Local configuration file (sdk path, etc)
 local.properties
