Add idea plugin

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ allprojects {
     jcenter()
   }
 }
+apply plugin: 'idea'
 
 ext.libraries = [
   autoValue          : 'com.google.auto.value:auto-value:1.2',
