--- a/auto-jackson-example/build.gradle
+++ b/auto-jackson-example/build.gradle
@@ -14,6 +14,7 @@ dependencies {
   processor libraries.autoValue
   compile libraries.jackson
   compile libraries.findbugs
+  compile libraries.slf4j
 
   testCompile libraries.junit
   testCompile libraries.assertJ
